--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,9 +11,10 @@ width: 100%;
 	float: left;
 	width: 100%;
 	height: 25%;
-	background: #FF0;
+	background: #C0C;	background-image:url(../imagenes/piano.jpg);
+
 	font-family:Arial, Helvetica, sans-serif;
-	color:#3CF;
+	color:#30C;
 }
 #Teclado
 {
@@ -29,7 +30,8 @@ width: 100%;
 	position: relative;
 	outline: #000 solid 1px;
 	width: 14.28571425571429%;
-	background: #F00;
+	background:#FF0;
+	
 }
 .textnota
 {
